--- a/projects/workshop/est-projects/fixie-app/fixie-app.component.html
+++ b/projects/workshop/est-projects/fixie-app/fixie-app.component.html
@@ -1,1 +1,33 @@
-<p>fixie-app works!</p>
+<est-project-entry
+  projectTitle="Fixie"
+  projectLink="https://www.behance.net/gallery/85557991/FIXIE-Bike-Frame-App-Concept"
+  projectLinkName="View on Behance"
+  projectYear="2019"
+>
+  <ul class="color-scheme-list">
+    <li style="background: #486d80"></li>
+    <li style="background: #ffa59c;"></li>
+    <li style="background: #426174"></li>
+  </ul>
+</est-project-entry>
+      
+<div class="clear"></div>
+
+<div class="row">
+  <p>
+    While working at BB&amp;T, my manager created a March Madness tournament of designers called Design or Die. During this tournament, each round was a different yet specific challenge. The third round, also known as the final four in March Madness, was where we had to design mobile experiences and we could animate if we wanted too. This challenge really allowed me to design around my passion of cycling and create the app called Fixie. It was a great experience for being able to create something from scratch and also create some great interactions when the user wants to learn more about a frame and order one. This was designed with Sketch and animated in Principle. I am sure you are wondering about the results of the tournament, let's just say, I have a championship belt to prove it.
+  </p>
+
+  <video controls>
+    <source src="/src/assets/images/fixie/fixie.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <img src="/assets/images/fixie/fixie1.jpg" alt="fixie image" width="1600px" height="1200px" />
+  <img src="/assets/images/fixie/fixie2.jpg" alt="fixie image" width="1600px" height="1200px"/>
+  <img src="/assets/images/fixie/fixie3.jpg" alt="fixie image" width="1600px" height="1200px"/>
+  <img src="/assets/images/fixie/fixie4.jpg" alt="fixie image" width="1600px" height="1200px"/>
+  <img src="/assets/images/fixie/fixie5.jpg" alt="fixie image" width="1600px" height="1200px"/>
+  <img src="/assets/images/fixie/fixie6.jpg" alt="fixie image" width="1600px" height="1200px"/>
+  <img src="/assets/images/fixie/fixie7.jpg" alt="fixie image" width="1600px" height="1200px"/>
+  <img src="/assets/images/fixie/fixie8.jpg" alt="fixie image" width="1600px" height="1200px"/>
+</div>
