--- a/projects/workshop/est-projects/horizontal-timeline/horizontal-timeline.component.html
+++ b/projects/workshop/est-projects/horizontal-timeline/horizontal-timeline.component.html
@@ -1,1 +1,23 @@
-<p>horizontal-timeline works!</p>
+<est-project-entry
+  projectTitle="Horizontal Timeline"
+  projectLink="https://www.behance.net/gallery/113134599/Horizontal-Timeline"
+  projectLinkName="View on Behance"
+  projectYear="2019"
+>
+  <ul class="color-scheme-list">
+    <li style="background: #1b76d2"></li>
+    <li style="background: #e1e1e1;"></li>
+    <li style="background: #4baf51"></li>
+  </ul>
+</est-project-entry>
+      
+<div class="clear"></div>
+
+<div class="row">
+  <p>
+    Transactional is a fictional company I created to depict the real world scenario I was put in. At my current employer, I lead a project for an application that would show the user the entire lifecycle of a PRO#. Due to NDA (Non-Disclosure Agreement), I cannot go over the full app in the design, but I want to focus on a key design element. This application is used by every department in the company which already puts a strain on the design process. The issue with the older version of the app was that there was not a good way to change from step to step. The main key feature that was requested was the ability to easily transition from one step in the process to next and the ability to go back. In the ideation phase of the design process, I presented the idea of using a horizontal timeline to show each step/change in the lifecycle. Different groups wanted different features, but the horizontal timeline was one solution because you could use the mouse to change points but also able to use the arrow keys to change points. We also created a active tooltip to label which step you are in the process. Another piece of functionality is the hover effect tooltip for non-active points. This showed the user which step was next or previous but gave them the ability to jump multiple steps.
+  </p>
+
+  <img src="/assets/images/timeline1.png" alt="horizontal timeline image" width="1024px" height="5264px" class="max-img" />
+  <img src="/assets/images/timeline2.png" alt="horizontal timeline image" width="1024px" height="5264px" />
+</div>
