what is cycling

--- a/projects/workshop/est-projects/tapples-banking/tapples-banking.component.html
+++ b/projects/workshop/est-projects/tapples-banking/tapples-banking.component.html
@@ -15,8 +15,14 @@
 
 <div class="row">
   <p>
-    As one of my first freelance projects, I was able to create the first website for Meat Camp Baptist Church. This was designed a long time ago, but I leave it on my portfolio to have a baseline for all future work. When I was tasked to create a website for the church, the website had to be able to allow the members to keep up with updates, closings and cancellations. Since I would not be responsible for updating the website with all of the notifications, I decided that I would build the site on a content management system (CMS). After researching a few options, I chose WordPress because it would be easy to train members from the church on how to make updates, add content, and add users.
+    Here is a concept of a mobile banking app. Everyone starts out with the same account and depending on your financial stability, you will be placed into the next tier. This gives banking a gamification aspect and allows the bank to teach the user to be more financially minded. Once the user completes the task to move into the next tier, it gives the bank the opportunity to celebrate with the user for making the proper financial moves. Having a tiered system is great for showing the user where they came from and what steps they need to take to keep making advances towards a better financial future.
   </p>
 
-  <img src="/assets/images/meatcamp.jpg" alt="meat camp church website" class="max-img" />
+  <img src="/assets/images/tapples/tapples1.png" alt="tapples image one" class="max-img" />
+  <img src="/assets/images/tapples/tapples2.png" alt="tapples image two" />
+  <img src="/assets/images/tapples/tapples3.png" alt="tapples image three" />
+  <img src="/assets/images/tapples/tapples4.png" alt="tapples image four" >
+  <img src="/assets/images/tapples/tapples5.png" alt="tapples image five" />
+  <img src="/assets/images/tapples/tapples6.png" alt="tapples image six" />
+  <img src="/assets/images/tapples/tapples7.png" alt="tapples image seven" />
 </div>
