--- a/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
+++ b/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
@@ -15,8 +15,28 @@
 
 <div class="row">
   <p>
-    As one of my first freelance projects, I was able to create the first website for Meat Camp Baptist Church. This was designed a long time ago, but I leave it on my portfolio to have a baseline for all future work. When I was tasked to create a website for the church, the website had to be able to allow the members to keep up with updates, closings and cancellations. Since I would not be responsible for updating the website with all of the notifications, I decided that I would build the site on a content management system (CMS). After researching a few options, I chose WordPress because it would be easy to train members from the church on how to make updates, add content, and add users.
+    What Is Cycling is a community project that I am starting to hopefully make cycling all inclusive so that everyone feels welcome and not intimidated. It is a project about individual cyclist and the different types of riding that makes them unique. It is simple, when I bike, I am going around and meeting people along the way and asking them different sets of questions: 
   </p>
 
-  <img src="/assets/images/meatcamp.jpg" alt="meat camp church website" class="max-img" />
+  <ol>
+    <li>Name? Where are you located? How long you have been riding?</li>
+    <li>What is your favorite type of riding?</li>
+    <li>What is cycling to you?</li>
+    <li>What advice would you give to someone getting started?</li>
+    <li>Specialty question depending on rider</li>
+  </ol>
+
+  <ul class="no-bullet">
+    <li>Instagram: <a href="https://www.instagram.com/whatiscycling/" target="_blank">@whatiscycling</a></li> 
+    <li>YouTube: <a href="https://www.youtube.com/channel/UCsbPd9s44lhhxquSF6PQHUw" target="_blank">@whatiscycling</a></li>
+    <li>Facebook: <a href="https://www.facebook.com/whatiscycling" target="_blank">@whatiscycling</a></li>
+    <li>Twitter: <a href="https://twitter.com/whatiscycling" target="_blank">@whatiscycling</a></li>
+    <li>Website: <a href="https://www.whatiscycling.com/" target="_blank">whatiscycling.com</a></li>
+    <li>Email: <a href="mailto:whatiscycling@gmail.com">whatiscycling@gmail.com</a></li>
+  </ul>
+
+  <img src="/assets/images/what-is-cycling/whatiscycling1.png" alt="what is cycling one" class="max-img" />
+  <img src="/assets/images/what-is-cycling/whatiscycling2.png" alt="what is cycling two" />
+  <img src="/assets/images/what-is-cycling/whatiscycling3.png" alt="what is cycling three" />
+  <img src="/assets/images/what-is-cycling/whatiscycling4.png" alt="what is cycling four" />
 </div>
