odfl.com case study

--- a/projects/workshop/est-projects/established-sixteen/established-sixteen.component.html
+++ b/projects/workshop/est-projects/established-sixteen/established-sixteen.component.html
@@ -15,13 +15,26 @@
 
 <div class="row">
   <p>
-    I wanted to demonstrate my process through redesigning this site. In every project, pen and pad are my tool of choice to get a few ideas out of my head and onto the paper. After mocking up a few designs, I would usually go to high-fidelity mockups, but for this project, I went straight to designing and developing. In this redesign, I wanted to focus on simplicity for the user and also minimalism. The home page is built with Flexbox and the remaining pages are built using a responsive grid boilerplate called <a href="http://getskeleton.com/" target="_blank">Skeleton.css</a>. All functionality is written from skratch like my navigation, which you can find the code <a href="https://codepen.io/Eli-townsend/pen/gGYvyW" target="_blank">here</a>. Let me know what you think!
+    I wanted to demonstrate my process through redesigning this site. In every project, pen and pad are my tool of choice to get a few ideas out of my head and onto the paper.
   </p>
 
-  <img src="/assets/images/est1992/mockup1.jpg" alt="mockup of est1992.com" class="max-img" height="1600" width="1200" />
+  <img src="/assets/images/est1992/home.png" alt="mockup of est1992.com" class="max-img" height="1600" width="1200" />
+  <img src="/assets/images/est1992/mockup1.jpg" alt="mockup of est1992.com" height="1600" width="1200" />
   <img src="/assets/images/est1992/mockup2.jpg" alt="mockup of est1992.com" height="1600" width="1200" />
   <img src="/assets/images/est1992/mockup3.jpg" alt="mockup of est1992.com" height="1600" width="1200" />
   <img src="/assets/images/est1992/mockup4.jpg" alt="mockup of est1992.com" height="1600" width="1200" />
   <img src="/assets/images/est1992/mockup5.jpg" alt="mockup of est1992.com" height="1600" width="1200" />
+
+  <p>
+    After mocking up a few designs, I would usually go to high-fidelity mockups, but for this project, I went straight to designing and developing.
+  </p>
+
+  <img src="/assets/images/est1992/workshop.png" alt="mockup of est1992.com" height="1600" width="1200" />
+  <img src="/assets/images/est1992/project.png" alt="mockup of est1992.com" height="1600" width="1200" />
+
+  <p>
+    In this redesign, I wanted to focus on simplicity and minimalism. It was a great face lift from the last website while doing a great job of representing my portfolio and skills. The home page is built with Flexbox and the remaining pages are built using a responsive grid boilerplate called <a href="http://getskeleton.com/" target="_blank">Skeleton.css</a>. All functionality is written from skratch like my navigation, which you can find the code <a href="https://codepen.io/Eli-townsend/pen/gGYvyW" target="_blank">here</a>. Let me know what you think!
+  </p>
+  
   <img src="/assets/images/est1992/estfull.png" alt="full screenshot of est1992.com" height="3072" width="2000" />
 </div>
