--- a/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
+++ b/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
@@ -15,7 +15,7 @@
 
 <div class="row">
   <p>
-    What Is Cycling is a community project that I am starting to hopefully make cycling all inclusive so that everyone feels welcome and not intimidated. It is a project about individual cyclist and the different types of riding that makes them unique. It is simple, when I bike, I am going around and meeting people along the way and asking them different sets of questions: 
+    What Is Cycling is a community project that I started to hopefully make cycling all inclusive so that everyone feels welcome and not intimidated. I heard a saying that goes like this, "if you are in a community, be apart of the community." Cycling is my community and this is how I want to help out with the community. It is a multi episode video series featuring individuals from the cycling community and the different types of riding that makes them unique. It is simple, when I bike, I am going around and meeting people along the way and asking them different sets of questions: 
   </p>
 
   <ol>
@@ -28,12 +28,16 @@
 
   <ul class="no-bullet">
     <li>Instagram: <a href="https://www.instagram.com/whatiscycling/" target="_blank">@whatiscycling</a></li> 
-    <li>YouTube: <a href="https://www.youtube.com/channel/UCsbPd9s44lhhxquSF6PQHUw" target="_blank">@whatiscycling</a></li>
-    <li>Facebook: <a href="https://www.facebook.com/whatiscycling" target="_blank">@whatiscycling</a></li>
+    <li>YouTube: <a href="https://www.youtube.com/channel/UCsbPd9s44lhhxquSF6PQHUw" target="_blank">What Is Cycling</a></li>
+    <li>Facebook: <a href="https://www.facebook.com/whatiscycling" target="_blank">/whatiscycling</a></li>
     <li>Twitter: <a href="https://twitter.com/whatiscycling" target="_blank">@whatiscycling</a></li>
     <li>Website: <a href="https://www.whatiscycling.com/" target="_blank">whatiscycling.com</a></li>
     <li>Email: <a href="mailto:whatiscycling@gmail.com">whatiscycling@gmail.com</a></li>
   </ul>
+
+  <p>
+    A new feature of What Is Cycling is the cycling specific job board. Whether you want to find a job for a race team, a local bike shop, your favorite brands or a change of scenery, you can bridge the gap with your passion and professional career. Check out the job board <a href="https://www.whatiscycling.com/job-board" target="_blank">here</a>.
+  </p>
 
   <img src="/assets/images/what-is-cycling/whatiscycling1.png" alt="what is cycling one" class="max-img" />
   <img src="/assets/images/what-is-cycling/whatiscycling2.png" alt="what is cycling two" />
