--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -16,7 +16,7 @@
     <est-workshop-blurb
       projectTitle="What Is Cycling"
       projectTag="Creator"
-      projectImgSrc="/city-series/shirtland.jpg"
+      projectImgSrc="whatiscyclingland.png"
       projectImgAlt="What Is Cycling Image"
       projectLink="whatiscycling"
     >
