--- a/projects/workshop/est-projects/odfl/odfl.component.scss
+++ b/projects/workshop/est-projects/odfl/odfl.component.scss
@@ -1,1 +1,8 @@
 @import "../../workshop.component.scss";
+
+img.case-study-img, img.case-study-img + figcaption {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
