--- a/projects/workshop/workshop.component.scss
+++ b/projects/workshop/workshop.component.scss
@@ -23,8 +23,10 @@ h6 {
 }
 
 p {
-  font-size: 1em;
+  font-size: 1.2em;
   font-weight: 600;
+  line-height: 2em;
+  margin: 2em 0;
 }
 
 .color-scheme-list {
