--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -91,6 +91,10 @@ a.back-to {
   pointer-events: none;
 }
 
+figure {
+  margin: 0;
+}
+
 img {
   width: $est-percent-100;
   height: auto;
@@ -145,4 +149,20 @@ p > code.block{
   body{
     padding: 0;
   }
+}
+
+/************
+Utility Classes
+***********/
+
+.est-margin-bottom-sm {
+  margin-bottom: 1em;
+}
+
+.est-margin-bottom-md {
+  margin-bottom: 2em;
+}
+
+.est-margin-bottom-lg {
+  margin-bottom: 3em;
 }
