--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -47,20 +47,29 @@ a {
 }
 
 p {
-  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif; 
   font-size: 16px; 
   font-style: normal; 
   font-variant: normal; 
-  font-weight: 400;
   line-height: 2.5em;
 
   .tiny {
     font-weight: 100;
   }
+
+  &.entry {
+    font-size: 1.4em; 
+    margin: 0 auto;
+    width: 85%;
+  }
 }
 
 .tools {
   font-size: 1.4em;
+}
+
+figure {
+  font-family: Georgia,Times,Times New Roman,serif; 
+  font-size: 14px;
 }
 
 @media (max-width: 500px) {
