--- a/projects/workshop/est-projects/odfl/odfl.component.html
+++ b/projects/workshop/est-projects/odfl/odfl.component.html
@@ -13,6 +13,7 @@
     
 <div class="clear"></div>
 
+<div class="row">
 <p class="entry">
   Old Dominion Freight Line(ODFL) is a LTL truckload shipping company that is based out of Thomasville, North Carolina. You might not know who ODFL is, but think of them as UPS and Fedex's biggest competition.
 </p>
@@ -43,7 +44,7 @@
 </figure>
 
 <figure>
-  <img src="/assets/images/finalMobile.jpg" alt="odfl mobile mockup image" class="case-study-img" width="1041px" height="1009px" />
+  <img src="/assets/images/finalMobile.jpg" alt="odfl mobile mockup image" class="case-study-img__height" />
   <figcaption>Mobile Balsamiq Mockup</figcaption>
 </figure>
 
@@ -77,3 +78,4 @@
 <p>
   Of course when you give users some completely new, they hate it because it looks different, but once the users used it and realized that many of the experiences were simplified or more functionality was added, they loved it. This was my first project at a corporate level and was a great learning experience. 
 </p>
+</div>
