what is cycling banner

--- a/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
+++ b/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.html
@@ -18,7 +18,7 @@
     What Is Cycling is a multi episode video series that features individual cyclist around the community and the different types of riding that makes them unique.
   </p>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/MgS8FlIcBQQ" title="What Is Cycling Episode 0012" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <img src="/assets/images/what-is-cycling/wic-banner.jpg" alt="what is cycling banner" />
 
   <p>
     What Is Cycling is not just a video series but a community project that I started to hopefully make cycling all inclusive so that everyone feels welcome and not intimidated. I heard a saying that goes like this, "if you are in a community, be apart of the community." Cycling is my community and this is how I want to help out with the community. It is simple, when I bike, I am going around and meeting people along the way and asking them different sets of questions: 
@@ -31,6 +31,8 @@
     <li>What advice would you give to someone getting started?</li>
     <li>Specialty question depending on rider</li>
   </ol>
+
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/MgS8FlIcBQQ" title="What Is Cycling Episode 0012" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <ul class="no-bullet">
     <li>Instagram: <a href="https://www.instagram.com/whatiscycling/" target="_blank">@whatiscycling</a></li> 
