--- a/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.scss
+++ b/projects/workshop/est-projects/what-is-cycling/what-is-cycling.component.scss
@@ -6,10 +6,13 @@ iframe {
 }
 
 ol {
+  font-size: 1.2em;
   line-height: 1.5;
 }
 
-ul.no-bullet {
+.row > ul.no-bullet {
+  font-size: 1.2em;
   list-style: none;
   line-height: 2;
+  text-align: center;
 }
