tapples case study

--- a/projects/workshop/est-projects/established-sixteen/established-sixteen.component.html
+++ b/projects/workshop/est-projects/established-sixteen/established-sixteen.component.html
@@ -14,6 +14,10 @@
 <div class="clear"></div>
 
 <div class="row">
+  <p class="entry">
+    Before redesiging my personal portfolio site in 2016, I had redesigned it numerous times, but this time, I was proud of what I created.
+  </p>
+
   <p>
     I wanted to demonstrate my process through redesigning this site. In every project, pen and pad are my tool of choice to get a few ideas out of my head and onto the paper.
   </p>
