--- a/projects/workshop/est-projects/odfl/odfl.component.html
+++ b/projects/workshop/est-projects/odfl/odfl.component.html
@@ -76,6 +76,6 @@
   </figure>
 
   <p>
-    Of course when you give users some completely new, they hate it because it looks different, but once the users used it and realized that many of the experiences were simplified or more functionality was added, they loved it. This was my first project at a corporate level and was a great learning experience. 
+    Of course when you give users something completely new, they hate it because it looks different. Once the users used it and realized that many of the experiences were simplified or more functionality was added, they loved it. This was my first project at a corporate level and it was a great learning experience. 
   </p>
 </div>
