--- a/projects/home-page/home-page.component.html
+++ b/projects/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <h1 class="mi-nombre">Elijah Townsend</h1>
 <img src="../../assets/images/mountains.jpg" alt="elijah in colorado" class="foto-de-viaje">
 
-<h2>Good <span>morning</span>! I am a technical product designer and a ultra endurance cyclist who goes by the name of Elijah Townsend. My mission is to turn creative ideas into user centered experiences.</h2>
+<h2>Good <span>morning</span>! I am a technical product designer and a ultra endurance cyclist. My mission is to turn creative ideas into user centered experiences.</h2>
 
 <h3 class="donde-esta">Where are you now?</h3>
 
