--- a/projects/home-page/home-page.component.scss
+++ b/projects/home-page/home-page.component.scss
@@ -24,7 +24,7 @@ h3 {
     border-top: 10px solid $black;
     font-size: 8em;
     margin-top: 35%;
-    text-align: right;
+    text-align: left;
   }
 }
 
