--- a/projects/workshop/est-projects/horizontal-timeline/horizontal-timeline.component.html
+++ b/projects/workshop/est-projects/horizontal-timeline/horizontal-timeline.component.html
@@ -14,10 +14,19 @@
 <div class="clear"></div>
 
 <div class="row">
-  <p>
-    Transactional is a fictional company I created to depict the real world scenario I was put in. At my current employer, I lead a project for an application that would show the user the entire lifecycle of a PRO#. Due to NDA (Non-Disclosure Agreement), I cannot go over the full app in the design, but I want to focus on a key design element. This application is used by every department in the company which already puts a strain on the design process. The issue with the older version of the app was that there was not a good way to change from step to step. The main key feature that was requested was the ability to easily transition from one step in the process to next and the ability to go back. In the ideation phase of the design process, I presented the idea of using a horizontal timeline to show each step/change in the lifecycle. Different groups wanted different features, but the horizontal timeline was one solution because you could use the mouse to change points but also able to use the arrow keys to change points. We also created a active tooltip to label which step you are in the process. Another piece of functionality is the hover effect tooltip for non-active points. This showed the user which step was next or previous but gave them the ability to jump multiple steps.
+  <p class="entry">
+    Transactional is a fictional company I created to depict the real world scenario I was put in. Due to NDA (Non-Disclosure Agreement), I cannot go over the full app in the design, but I want to focus on a key design element.
   </p>
 
   <img src="/assets/images/timeline1.png" alt="horizontal timeline image" width="1024px" height="5264px" class="max-img" />
+
+  <p>
+     At my previous employer, as the lead for the project, Transactional was an application that would show the user the entire lifecycle of a PRO#. Once a dock worker or driver, etc would scan the PRO#, it would add a new step in the PRO# lifecycle. This application is used by eighty percent of the departments in the company which already puts a strain on the design process. Everyone wanted a say in the application design which turned the design into a design by committee rather than how it should have been designed through the ux/ui process. The issue with the older version of the app was that there was not a good way to change from step to step. The main key feature that was requested was the ability to easily transition from one step in the process to next and the ability to go back. In the ideation phase of the design process, I presented the idea of using a horizontal timeline to show each step and change in the lifecycle. Different groups wanted different features, but the horizontal timeline was one solution because you could use the mouse to change points but also able to use the arrow keys to change points. Certain teams were very reliant on the keyboard for quicker production, so the solution had to take into account keyboard usage. We also created a active tooltip to label which step you are in the process. Another piece of functionality is the hover effect tooltip for non-active points. This showed the user which step was next or previous but gave them the ability to jump multiple steps.
+  </p>
+
   <img src="/assets/images/timeline2.png" alt="horizontal timeline image" width="1024px" height="5264px" />
+
+  <p>
+    This experience was a great learning tool for me in setting expectations for a project, not letting the scope grow and properly define deliverables. This also allowed me to work on my public speaking and handle difficult conversations in the moment while maintaining professionalism in the meeting.
+  </p>
 </div>
