--- a/projects/workshop/est-projects/od-move/od-move.component.html
+++ b/projects/workshop/est-projects/od-move/od-move.component.html
@@ -14,9 +14,67 @@
 <div class="clear"></div>
 
 <div class="row">
-  <p>
-    While working at Old Dominion Freight Line, the business had a need for a customer facing website to be created. The new site is an open into a new market which will bring in more revenue for the company. Being the lead designer for this project, I was able to meet with the business to obtain specs and ask questions about how the site and business were going to work together. In meeting with the business, we had to distinguish what the requirements were while meeting with users to validate the user experience we had designed. One key improvement towards the initial process was by investigating, researching, and testing our Instant Estimate. We white boarded different scenarios but ultimately created a great product by simplifying this process for a decrease of 50% of user clicks to get through the entire Instant Estimate.
+  <p class="entry">
+    OD Move is the customer facing service provided by Old Dominion Freight Line, also known as OD Household Services. If you are moving, you can order a trailer, fill it with your belongings and get it delivered to your new location.
   </p>
 
-  <img src="/assets/images/odmove.jpg" alt="full image of odmove.com" width="1024px" height="5264px" class="max-img" />
+  <img src="/assets/images/odmoveland.jpg" alt="image of odmove.com" class="max-img" />
+
+  <p>
+    The new site is an open into a new market which will bring in more revenue for the company. Being the lead designer for this project, I was able to meet with the business to obtain specs and ask questions about how the site and business were going to work together. In meeting with the business, we had to distinguish what the requirements were while meeting with users to validate the user experience we had designed. One key improvement towards the initial process was by investigating, researching, and testing our Instant Estimate. We white boarded different scenarios but ultimately created a great product by simplifying this process for a decrease of 50% of user clicks to get through the entire Instant Estimate.
+  </p>
+
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/old-odmove.jpg" alt="old odmove image" class="case-study-img" />
+    <figcaption>odmove.com before redesign</figcaption>
+  </figure>
+
+  <p>
+    Beore we get into the rest of branding and the design of the website, I want to draw you attention to the Instant Estimate. We wanted to make the process simpler for the customer when they want to get an Instant Estimate. The old Instant Estimate required too much information than what was actually need to submit the form. It turned out that the reason that all of this information was needed was for marketing so they could send out offers and keep the clients in the loops. We still did not feel like that was a good enough reason to force the users hand fillng out the information this early in the experience. The user is more than likely going through numerous services and trying to get the lowest quote possible, therefore, we want to provide them with the Instant Estimate as quickly as we can. After simplifying the process down to Origin Zip, Destination Zip, Moving Date and Size of the move, we then moved the marketing information in the following step. We took a nine step form for the initial Instant Estimate down to a four step form. This allowed for quicker quotes, but also allowed marketing to get the information they needed in the next step which increased the rate of resources used.
+  </p>
+
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/odmove/styletile1.jpg" alt="style tile" class="case-study-img" />
+    <figcaption>1-2 style tiles presented to business</figcaption>
+  </figure>
+ 
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/odmove/styletile2.jpg" alt="style tile" class="case-study-img" />
+    <figcaption>2-2 style tiles presented to business</figcaption>
+  </figure>
+
+  <p>
+    After we established the direction with the brand of the site, we focused on the hierarchy and structure of the website. We presented two ideas for the layout of the site. We designed a full width and height website where each page took up the entire viewport with no scrolling. The second design was a single page scroll until you filled out the form to quote you move. That form would take you to another page in the flow. Here are some mockups that were presented to the business.
+  </p>
+
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/odmove/single1.jpg" alt="single section image" class="case-study-img" />
+    <figcaption>1-3 single section design</figcaption>
+  </figure>
+  
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/odmove/single2.jpg" alt="single section image" class="case-study-img" />
+    <figcaption>2-3 single section design</figcaption>
+  </figure>
+
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/odmove/single3.jpg" alt="single section image" class="case-study-img" />
+    <figcaption>3-3 single section design</figcaption>
+  </figure>
+  
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/odmove/scroll1.jpg" alt="single page scroll image" class="case-study-img" />
+    <figcaption>1-2 single page scroll design</figcaption>
+  </figure>
+  
+  <figure class="est-margin-bottom-lg">
+    <img src="/assets/images/odmove/scroll2.jpg" alt="single page scroll image" class="case-study-img" />
+    <figcaption>2-2 single page scroll design</figcaption>
+  </figure>
+
+  <p>
+    The decision was made that we were going to be designing for a single page scroll site. Single page scroll sites are nice because you do not have to worry about linking and other page designs, but you do have to worry about animation and making sure the hierarchy of the page keeps the user moving down the page or completing the desired outcome. Here is the live site as of 2018. 
+  </p>
+
+  <img src="/assets/images/odmove.jpg" alt="full image of odmove.com" width="1024px" height="5264px" />
 </div>
