--- a/projects/workshop/est-projects/meat-camp-church/meat-camp-church.component.html
+++ b/projects/workshop/est-projects/meat-camp-church/meat-camp-church.component.html
@@ -14,6 +14,10 @@
 <div class="clear"></div>
 
 <div class="row">
+  <p class="entry">
+    Meat Camp Baptist Church is a cute church located in the mountains of North Carolina. You can find the church off of 194 in Boone, North Carolina.
+  </p>
+
   <p>
     As one of my first freelance projects, I was able to create the first website for Meat Camp Baptist Church. This was designed a long time ago, but I leave it on my portfolio to have a baseline for all future work. When I was tasked to create a website for the church, the website had to be able to allow the members to keep up with updates, closings and cancellations. Since I would not be responsible for updating the website with all of the notifications, I decided that I would build the site on a content management system (CMS). After researching a few options, I chose WordPress because it would be easy to train members from the church on how to make updates, add content, and add users.
   </p>
