--- a/projects/workshop/est-projects/branch-banking-trust/branch-banking-trust.component.html
+++ b/projects/workshop/est-projects/branch-banking-trust/branch-banking-trust.component.html
@@ -14,9 +14,29 @@
 <div class="clear"></div>
 
 <div class="row">
-  <p>
-    As one of my first freelance projects, I was able to create the first website for Meat Camp Baptist Church. This was designed a long time ago, but I leave it on my portfolio to have a baseline for all future work. When I was tasked to create a website for the church, the website had to be able to allow the members to keep up with updates, closings and cancellations. Since I would not be responsible for updating the website with all of the notifications, I decided that I would build the site on a content management system (CMS). After researching a few options, I chose WordPress because it would be easy to train members from the church on how to make updates, add content, and add users.
+  <p class="entry">
+    BB&amp;T (Branch Banking &amp; Trust), now known as <a href="https://www.truist.com/" target="_blank">Truist Financial Corporation</a>, is an American bank holding company. I started my role in June of 2018 and we merged with Suntrust to form Truist in December of 2019.
   </p>
 
-  <img src="/assets/images/meatcamp.jpg" alt="meat camp church website" class="max-img" />
+  <p>
+    I was put on one of the retail web teams where we focused on accessibility and user-centered design for our enterprise platform, U. We designed with careful consideration for business requirements, user feedback and usability findings. One day, my product owner came to me and explained an issue we were having with users not being able to find certain features from the account details page. Customer service was being called because the users were unable to find account settings, order checks and other links. 
+  </p>
+
+  <figure>
+    <img src="/assets/images/bbt1.png" alt="bbt account details image" class="case-study-img"/>
+    <figcaption>See if you can find the specific account settings</figcaption>
+  </figure>
+
+  <p>
+    The account settings that individuals were trying to find was specifc to the account that was selected and not your entire profile settings, which you could find in profile &amp; settings in the navigation. If you cannot find it, you would click on Manage Account on the right rail with the account links. The first recommendation I suggested was to make a content change. If the content does not tell you what you are clicking on, chances are the content is wrong. For alignment and consistency, that recommendation fell through the cracks. My second recommendation was to put secondary text under the account. 
+  </p>
+
+  <figure>
+    <img src="/assets/images/bbt2.png" alt="bbt account details image" class="case-study-img"/>
+    <figcaption>Where do you order checks?</figcaption>
+  </figure>
+
+  <p>
+    This recommendation was tested with users and came back as a successful solutions. User testing came back and told use with secondary text, we could direct the user wherever they needed to go. 
+  </p>
 </div>
